fix logo position on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -1010,8 +1010,6 @@ strong,
     position: relative;
     text-align: center;
 }
-.page-cent .content p{
-}
 .page-cent .content{
     width: 720px;
     width: 100%;
